midpoint APG + cleaning

--- a/DaTaReachControl/test_overapproxN.ipynb
+++ b/DaTaReachControl/test_overapproxN.ipynb
@@ -19,7 +19,10 @@
     "from DaTaReachControl import generateTraj, synthNextState, synthTraj,\\\n",
     "                                FOverApprox, GOverApprox,Interval\n",
     "\n",
-    "import time"
+    "import time\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib widget\n",
+    "%config InlineBackend.figure_format = 'svg'"
    ]
   },
   {
@@ -216,13 +219,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7d4d5caf09f400ca1ed51f8c43e50f7",
+       "model_id": "a182380029d4425cad5624c8d249e18d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -236,7 +239,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4930bc1870454797ba320b7c466ec503",
+       "model_id": "be93d4ca378f489f8d1cf19bb3d3a2d7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -250,7 +253,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f733945b10e54834a9ffe1ada8517a8b",
+       "model_id": "9e5ead9ea41d4bab87d093b0f705a978",
        "version_major": 2,
        "version_minor": 0
       },
@@ -264,7 +267,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eedeee42465d48efacd27a4b787b7738",
+       "model_id": "b05a12b0682c40e2a5e2233ef20bb6a3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -278,7 +281,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c2bdcac8d0b24100a47a579c60659161",
+       "model_id": "2d62f7797c604162839b596b291b93d9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -292,7 +295,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b6f2957a82e4a9fae866bc0618da0fd",
+       "model_id": "923b2a3f443949bcb253b5eaaff4ce9f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -338,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +373,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True, True)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "canApproximate(overApprox)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,15 +421,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Numba :  0.0006923675537109375\n",
-      "Default :  0.005765676498413086\n",
+      "Numba :  0.0009009838104248047\n",
+      "Default :  0.006118297576904297\n",
       "[[[0.0546397 , 0.3480496]]\n",
       " [[0.0106795 , 0.2720523]]]\n",
       "[[-2.0743704 , -2.0716792] [-2.7593217 , -2.7245168]\n",
@@ -482,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,23 +527,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.010428667068481445\n"
+      "0.010094404220581055\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.03985166549682617"
+       "0.04052877426147461"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,13 +563,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e29ea80f7a14b6ab6a2754cb0a2ae08",
+       "model_id": "323cb644a43c4ba4beedada83548b67f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -560,7 +583,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f938d88e4aa4673849bcb40a8191889",
+       "model_id": "e62920d32656486e91213225067b423c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -574,7 +597,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cca921a6799b4ac58c43cb29cda5f976",
+       "model_id": "b049df045f974074a329fbadcad263fe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -611,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -670,23 +693,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0339510440826416\n"
+      "0.014092206954956055\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.21704363822937012"
+       "0.23214459419250488"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,13 +729,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64ea5d81000742f8b606d4ec74813481",
+       "model_id": "09dff1bc945b4bba886ebcc0084295a2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -726,7 +749,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "588763c82dc441808170bb3d8172afdd",
+       "model_id": "9102525f61c4486faa86f903d8ee6aec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -740,7 +763,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ee8bb393e194e14add5e9ee8372de5a",
+       "model_id": "ea47fe1645924b7ebbfd3368a0a4ec73",
        "version_major": 2,
        "version_minor": 0
       },
@@ -778,13 +801,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e9f55357417419a91778badced57a74",
+       "model_id": "6f646f41070841c2bf56347d09c68285",
        "version_major": 2,
        "version_minor": 0
       },
@@ -835,6 +858,105 @@
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.09801960187872605\n"
+     ]
+    }
+   ],
+   "source": [
+    "U_lb = np.array([-v_max, -w_max])\n",
+    "U_ub = np.array([v_max, w_max])\n",
+    "\n",
+    "coeff = getCoeffGronwall(overApprox, dt, U_lb, U_ub)\n",
+    "print(coeff)\n",
+    "b_lb, b_ub, A1_lb, A1_ub, A2_lb, A2_ub = controlAffineOverApprox(overApprox, rand_init_traj_vec[-1,:], dt, U_lb, U_ub, knownG=knownGfun, gronwallCoeff=coeff)\n",
+    "\n",
+    "from DaTaReachControl.control import computeAffineLinear\n",
+    "b_val, A_val = computeAffineLinear(rand_init_traj_vec[-1,:].reshape(-1,1), dt, fOverO, GoverO, n2i(U_lb, U_ub).reshape(-1,1), \n",
+    "                                                    coeff, fixpointWidenCoeff=0.2, zeroDiameter=1e-5, widenZeroInterval=1e-3, gronwall=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0003261566162109375\n",
+      "0.0033469200134277344\n"
+     ]
+    }
+   ],
+   "source": [
+    "s_time = time.time()\n",
+    "b_lb, b_ub, A1_lb, A1_ub, A2_lb, A2_ub = controlAffineOverApprox(overApprox, rand_init_traj_vec[-1,:], dt, U_lb, U_ub, knownG=knownGfun, gronwallCoeff=coeff)\n",
+    "print(time.time()-s_time)\n",
+    "s_time = time.time()\n",
+    "b_val, A_val = computeAffineLinear(rand_init_traj_vec[-1,:].reshape(-1,1), dt, fOverO, GoverO, n2i(U_lb, U_ub).reshape(-1,1), \n",
+    "                                                    coeff, fixpointWidenCoeff=0.2, zeroDiameter=1e-5, widenZeroInterval=1e-3, gronwall=True)\n",
+    "print(time.time()-s_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-2.5904129 , -2.5904129] [-4.4306366 , -4.4306366]\n",
+      " [0.9421056 , 0.9421056]]\n",
+      "[[-2.5904129 , -2.5904129] [-4.4306366 , -4.4306366]\n",
+      " [0.9421056 , 0.9421056]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(n2i(b_lb, b_ub))\n",
+    "print(b_val.flatten())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.0293201 , 0.0300793] [-0.0050000 , 0.0050000]]\n",
+      " [[0.0397480 , 0.0406174] [-0.0050000 , 0.0050000]]\n",
+      " [[0.0000000 , 0.0000000] [0.0500000 , 0.0500000]]]\n",
+      "[[0.0220692 , 0.0300793] [-0.0050000 , 0.0050000]]\n",
+      "[[[0.0253931 , 0.0340063] [0.0000000 , 0.0000000]]\n",
+      " [[0.0358210 , 0.0445444] [0.0000000 , 0.0000000]]\n",
+      " [[0.0000000 , 0.0000000] [0.0500000 , 0.0500000]]]\n",
+      "[[0.0386580 , 0.0466681] [-0.0050000 , 0.0050000]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(n2i(A1_lb, A1_ub))\n",
+    "print(A_val[0])\n",
+    "\n",
+    "print(n2i(A2_lb, A2_ub))\n",
+    "print(A_val[1])"
    ]
   }
  ],
