update reachable set + .ipynb example + fix bug control

--- a/jupyter_scripts/control_ex.ipynb
+++ b/jupyter_scripts/control_ex.ipynb
@@ -9,10 +9,7 @@
     "import numpy as np\n",
     "from numpy import float64 as realN\n",
     "\n",
-    "from DaTaReachControl import Interval\n",
-    "\n",
-    "from controlN import *\n",
-    "from control import *\n",
+    "from DaTaReachControl import DaTaControl, OPTIMISTIC_GRB, IDEALISTIC_GRB, IDEALISTIC_APG\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib widget\n",
@@ -22,61 +19,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Transformation from Interval type to Tuple(array type)\n",
-    "def n2i(x_lb, x_ub):\n",
-    "    if isinstance(x_lb, int) or isinstance(x_lb, float):\n",
-    "        return Interval(float(x_lb), float(x_ub))\n",
-    "    res = np.full(x_lb.shape, Interval(0),dtype=Interval)\n",
-    "    if len(x_lb.shape) == 1:\n",
-    "        for i in range(res.shape[0]):\n",
-    "            res[i] = Interval(x_lb[i], x_ub[i])\n",
-    "    elif len(x_lb.shape) == 2:\n",
-    "        for i in range(res.shape[0]):\n",
-    "            for j in range(res.shape[1]):\n",
-    "                res[i,j] = Interval(x_lb[i,j], x_ub[i,j])\n",
-    "    else:\n",
-    "        for i in range(res.shape[0]):\n",
-    "            for j in range(res.shape[1]):\n",
-    "                for k in range(res.shape[2]):\n",
-    "                    res[i,j,k] = Interval(x_lb[i,j,k], x_ub[i,j,k])\n",
-    "    return res\n",
-    "\n",
-    "def i2n(intVal):\n",
-    "    if isinstance(intVal, Interval):\n",
-    "        return intVal.lb, intVal.ub\n",
-    "    res_lb = np.empty(intVal.shape, dtype=realN)\n",
-    "    res_ub = np.empty(intVal.shape, dtype=realN)\n",
-    "    if len(intVal.shape) == 1:\n",
-    "        for i in range(res_lb.shape[0]):\n",
-    "            res_lb[i], res_ub[i] = intVal[i].lb, intVal[i].ub\n",
-    "    elif len(intVal.shape) == 2:\n",
-    "        for i in range(res_lb.shape[0]):\n",
-    "            for j in range(res_lb.shape[1]):\n",
-    "                res_lb[i,j], res_ub[i,j] = intVal[i,j].lb, intVal[i,j].ub\n",
-    "    else:\n",
-    "        for i in range(res_lb.shape[0]):\n",
-    "            for j in range(res_lb.shape[1]):\n",
-    "                for k in range(res_lb.shape[2]):\n",
-    "                    res_lb[i,j,k], res_ub[i,j,k] = intVal[i,j,k].lb, intVal[i,j,k].ub\n",
-    "    return res_lb, res_ub\n",
-    "\n",
-    "def gen_int(shape=None, minVal=-10, widthMax=10):\n",
-    "    if shape is None:\n",
-    "        lb = widthMax * np.random.random() + minVal\n",
-    "        ub = lb + widthMax * np.random.random()\n",
-    "        return Interval(float(lb), float(ub))\n",
-    "    else:\n",
-    "        lb = widthMax * np.random.random(shape) + minVal\n",
-    "        ub = lb + widthMax * np.random.random(shape)\n",
-    "        return n2i(lb,ub)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,11 +118,11 @@
     "w_seq[0,0] = 0.0 #\n",
     "v_seq[0,0] = 0.0\n",
     "for i in range(1,nSep):\n",
-    "  v_or_theta = np.random.randint(0,2)\n",
-    "  if v_or_theta == 0: # pick v\n",
-    "    w_seq[sepIndexes[i],0] = 0\n",
-    "  else: # pick theta\n",
-    "    v_seq[sepIndexes[i],0] = 0\n",
+    "    v_or_theta = np.random.randint(0,2)\n",
+    "    if v_or_theta == 0: # pick v\n",
+    "        w_seq[sepIndexes[i],0] = 0\n",
+    "    else: # pick theta\n",
+    "        v_seq[sepIndexes[i],0] = 0\n",
     "rand_init_input_vec = np.hstack((v_seq,w_seq))\n",
     "# print (rand_init_input_vec)\n",
     "###################################################################\n",
@@ -225,13 +167,6 @@
     "    \"\"\"\n",
     "    next_state, _ = one_step_dyn(current_state, current_input)\n",
     "    return compute_cost(next_state)\n",
-    "\n",
-    "def DaTa(next_state, current_control):\n",
-    "    \"\"\"\n",
-    "    Defining the cost function for the Taylor method approach\n",
-    "    \"\"\"\n",
-    "    return 0.5 *((next_state[0]-target_position[0])*(next_state[0]-target_position[0])+\\\n",
-    "            (next_state[1]-target_position[1])*(next_state[1]-target_position[1]))\n",
     "\n",
     "########## Utilities functions #######################################\n",
     "def exit_condition(current_state, current_input, next_state):\n",
@@ -324,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -360,13 +295,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "89da0ed2b5a5453aa0b5493a28b2916e",
+       "model_id": "488087616d474efbb9f82e47c8b00d9a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -392,70 +327,19 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "0. Current state: [[-0.65 -4.99  3.11]] | Initial action guess: [-4.   -3.14]\n",
-      "Solver method: L-BFGS-B\n",
-      "Best action = [[-4.    3.14]] | Attained cost = 12.2599 | Time = 0.0053 s \n",
-      "\n",
-      "1. Current state: [[-0.25 -4.95  3.42]] | Initial action guess: [-4.   -3.14]\n",
-      "Solver method: L-BFGS-B\n",
-      "Best action = [[-4.    3.14]] | Attained cost = 11.4146 | Time = 0.0023 s \n",
-      "\n",
-      "2. Current state: [[ 0.11 -4.78  3.74]] | Initial action guess: [-4.   -3.14]\n",
-      "Solver method: L-BFGS-B\n",
-      "Best action = [[-4.    3.14]] | Attained cost = 10.2271 | Time = 0.0016 s \n",
-      "\n",
-      "3. Current state: [[ 0.4  -4.51  4.05]] | Initial action guess: [-4.   -3.14]\n",
-      "Solver method: L-BFGS-B\n",
-      "Best action = [[-4.    3.14]] | Attained cost = 8.8135 | Time = 0.0016 s \n",
-      "\n",
-      "4. Current state: [[ 0.59 -4.16  4.36]] | Initial action guess: [-4.   -3.14]\n",
-      "Solver method: L-BFGS-B\n",
-      "Best action = [[-4.    3.14]] | Attained cost = 7.3123 | Time = 0.0020 s \n",
-      "\n",
-      "5. Current state: [[ 0.67 -3.77  4.68]] | Initial action guess: [-4.   -3.14]\n",
-      "Solver method: L-BFGS-B\n",
-      "Best action = [[-4.    3.14]] | Attained cost = 5.8703 | Time = 0.0015 s \n",
-      "\n",
-      "6. Current state: [[ 0.62 -3.37  4.99]] | Initial action guess: [-4.   -3.14]\n",
-      "Solver method: L-BFGS-B\n",
-      "Best action = [[-4.   -1.51]] | Attained cost = 4.5813 | Time = 0.0020 s \n",
-      "\n",
-      "7. Current state: [[ 0.54 -2.98  4.84]] | Initial action guess: [-4.   -3.14]\n",
-      "Solver method: L-BFGS-B\n",
-      "Best action = [[-4.    0.78]] | Attained cost = 3.4508 | Time = 0.0022 s \n",
-      "\n",
-      "8. Current state: [[ 0.47 -2.58  4.92]] | Initial action guess: [-4.   -3.14]\n",
-      "Solver method: L-BFGS-B\n",
-      "Best action = [[-4.  -0.4]] | Attained cost = 2.4801 | Time = 0.0021 s \n",
-      "\n",
-      "9. Current state: [[ 0.4  -2.19  4.88]] | Initial action guess: [-4.   -3.14]\n",
-      "Solver method: L-BFGS-B\n",
-      "Best action = [[-4.    0.21]] | Attained cost = 1.6692 | Time = 0.0021 s \n",
-      "\n",
-      "10. Current state: [[ 0.33 -1.8   4.9 ]] | Initial action guess: [-4.   -3.14]\n",
-      "Solver method: L-BFGS-B\n",
-      "Best action = [[-4.   -0.11]] | Attained cost = 1.0184 | Time = 0.0021 s \n",
-      "\n",
-      "11. Current state: [[ 0.25 -1.4   4.89]] | Initial action guess: [-4.   -3.14]\n",
-      "Solver method: L-BFGS-B\n",
-      "Best action = [[-4.    0.06]] | Attained cost = 0.5275 | Time = 0.0019 s \n",
-      "\n",
-      "12. Current state: [[ 0.18 -1.01  4.89]] | Initial action guess: [-4.   -3.14]\n",
-      "Solver method: L-BFGS-B\n",
-      "Best action = [[-4.   -0.03]] | Attained cost = 0.1967 | Time = 0.0021 s \n",
-      "\n",
-      "13. Current state: [[ 0.11 -0.62  4.89]] | Initial action guess: [-4.   -3.14]\n",
-      "Solver method: L-BFGS-B\n",
-      "Best action = [[-4.    0.02]] | Attained cost = 0.0258 | Time = 0.0022 s \n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'DaTaReachControl.examples'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-0e80f5b8a3d2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mDaTaReachControl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexamples\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMyopicDataDrivenControlTrue\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mMyopicDataDrivenControlTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m# Construct the initial data package for true one-step optimal control ########\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m training_data = {'trajectory': rand_init_traj_vec,\n\u001b[1;32m      4\u001b[0m                  \u001b[0;34m'input_seq'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mrand_init_input_vec\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                  'cost_val': rand_init_cost_val_vec}\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'DaTaReachControl.examples'"
      ]
     }
    ],
    "source": [
-    "from MyopicDataDrivenControlTrue import MyopicDataDrivenControlTrue\n",
+    "from DaTaReachControl.examples.MyopicDataDrivenControlTrue import MyopicDataDrivenControlTrue\n",
     "# Construct the initial data package for true one-step optimal control ########\n",
     "training_data = {'trajectory': rand_init_traj_vec,\n",
     "                 'input_seq': rand_init_input_vec,\n",
