--- a/jupyter_scripts/optimizer_ex.ipynb
+++ b/jupyter_scripts/optimizer_ex.ipynb
@@ -10,13 +10,14 @@
     "import numpy as np\n",
     "import time\n",
     "\n",
-    "from weightedPointControlPGDAR import *\n",
-    "from weightedPointControlGRb import *"
+    "from DaTaReachControl.idealisticControlGrb import *\n",
+    "from DaTaReachControl.idealisticControlAPGDAR import *\n",
+    "from DaTaReachControl.optimisticControlGrb import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,8 +42,8 @@
     "S = np.zeros((nS, nC), dtype=np.float64)\n",
     "r = np.zeros(nC, dtype=np.float64)\n",
     "\n",
-    "u_lb = - np.random.random(nC)\n",
-    "u_ub = np.random.random(nC)\n",
+    "u_lb = (np.random.random(nC) - 0.5) * 2\n",
+    "u_ub = u_lb + np.random.random(nC)\n",
     "\n",
     "w1 = np.random.random()\n",
     "w2 = np.random.random()\n",
@@ -51,32 +52,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "--------------------------------------------\n",
-      "Warning: your license will expire in 4 days\n",
-      "--------------------------------------------\n",
-      "\n",
-      "Using license file /home/franck/gurobi.lic\n",
-      "Academic license - for non-commercial use only\n",
-      "0.0013968944549560547\n",
-      "[ 0.          0.         -0.30800512]\n",
-      "-2.3065454033128083\n"
+      "[ 0.05035154 -0.01709445 -0.11797619] [0.36259868 0.31701789 1.00362112]\n"
      ]
     }
    ],
    "source": [
+    "u_lb[2] = -u_lb[2]\n",
+    "print (u_lb, u_ub)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Midpoint with GUrbobi\n",
-    "initMidpointProblem(u_lb, u_ub)\n",
+    "initIdealisticProblemGrb(u_lb, u_ub)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0018947124481201172\n",
+      "[ 0.05035154 -0.01709445  0.        ]\n",
+      "0.4667641848391332\n"
+     ]
+    }
+   ],
+   "source": [
     "tC = time.time()\n",
-    "uGrb, cGrb = solveWeightedProblem(A1_lb, A1_ub, A2_lb, A2_ub, b_lb, b_ub, u_lb, u_ub,\n",
-    "                            2, Q, S, R, q, r, w1, w2, w3, verbose=False)\n",
+    "uGrb, cGrb = solveIdealisticProblemGrb(A1_lb, A1_ub, A2_lb, A2_ub, b_lb, b_ub, u_lb, u_ub,\n",
+    "                            1, Q, S, R, q, r, w1, w2, w3, verbose=False)\n",
     "print(time.time() - tC)\n",
     "print(uGrb)\n",
     "print(cGrb)"
@@ -84,24 +104,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.3248953819274902\n",
-      "[ 0.          0.         -0.30800512]\n",
-      "-2.3065454033128088\n"
+      "2\n",
+      "0.0023581981658935547\n",
+      "[ 0.05035154 -0.01709445  0.        ]\n",
+      "0.46676418394140695\n"
      ]
     }
    ],
    "source": [
     "# Midpoint with Accelerated Projected Gradient With Gradient Restart Scheme\n",
     "tC = time.time()\n",
-    "uAPG, cAPG = solveWeightedProblemAPGDAR(A1_lb, A1_ub, A2_lb, A2_ub, b_lb, b_ub, u_lb, u_ub,\n",
-    "                            2, Q, S, R, q, r, w1, w2, w3, epsTol=1e-8)\n",
+    "uAPG, cAPG = solveIdealisticProblemAPGDAR(A1_lb, A1_ub, A2_lb, A2_ub, b_lb, b_ub, u_lb, u_ub,\n",
+    "                            1, Q, S, R, q, r, w1, w2, w3, epsTol=1e-8)\n",
     "print(time.time() - tC)\n",
     "print(uAPG)\n",
     "print(cAPG)"
@@ -109,26 +130,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check the optimistic problem\n",
+    "initOptimisticProblemGrb(nS, nC, None, None, None, None, None, u_lb, u_ub)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.014175653457641602\n",
-      "[ 0.          0.         -0.30800512] 7.960088847859777\n"
+      "0.0024695396423339844\n",
+      "[ 0.05035154 -0.01709445  0.        ] 5.299882334688636\n"
      ]
     }
    ],
    "source": [
-    "# Check the optimistic problem\n",
-    "from optimisticControlGrb import *\n",
-    "initOptimisticProblem(nS, nC, None, None, None, None, None, u_lb, u_ub)\n",
     "updateCost(Q, S, R, q, r)\n",
     "tC = time.time()\n",
-    "uOp, cOp = solveOptimisticProblem(A1_lb, A1_ub, A2_lb, A2_ub, b_lb, b_ub,\n",
-    "            u_lb, u_ub, 2, verbose=False)\n",
+    "uOp, cOp = solveOptimisticProblemGrb(A1_lb, A1_ub, A2_lb, A2_ub, b_lb, b_ub,\n",
+    "            u_lb, u_ub, 1, verbose=False)\n",
     "print(time.time() - tC)\n",
     "print(uOp, cOp)"
    ]
